<resources>
    <string name="app_name">BasicChatApp</string>
    <string name="name">ChitChat</string>
    <string name="Email">Enter your E-mail</string>
    <string name="Password">Enter your Password</string>
    <string name="todo">TODO</string>
    <string name="yourname">Enter your name</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="already">Already have a account!</string>
    <string name="dont">Don\'t have a account?</string>
</resources>